--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   
    <font size = "5">  Hello Tiny Human World! We're Here To Invade You.</font><br />
-<img src=”Images/ufo.png”>
-<img src=”Images/zombiejockey.png”>
+<img src="Images/ufo.png">
+<img src="Images/zombiejockey.png">
 
 
 </html>
