--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   
-   <font size = "5">  Hello Tiny Human World! We're Here To Invade You.</font><br />
+   <font size = "5">  Hello Tiny Human World! We're Here To Invade You.</font><br 
+width="400"
+height= auto/>
 <img src="Images/ufo.png">
 
 </html>
