--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   
-   <font size = "5">  Hello Tiny Human World! We're Here To Invade You.</font><br 
-width= "50"
-height= auto/>
-<img src="Images/ufo.png">
+   <font size = "5">  Hello Tiny Human World! We're Here To Invade You.</font><br/>
+
+<img src="Images/ufo.png"
+width= "100"
+height= auto
+/>
 
 </html>
