--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ width= "500"
 height= auto
 />
 
-<table style= "background-color: green">
+<table style= "background-color:powderblue">
 
 </body>
 </html>
