--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ height= auto
 
 <body bgcolor= "#rrggbb">
 
-<font color="#000000">
+<body text= "#ffffff" link= "#ff0000" vlink= "#ff0000" alink= "#ff0000">
 
 </html>
