--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@ height= auto
 
 <body bgcolor= "#rrggbb">
 
-<body text= "#ffffff" link= "#ff0000" vlink= "#ff0000" alink= "#ff0000">
+<body>
+
+<div style= "background-image: url('https://upload.wikimedia.org/wikipedia/en/9/9a/Trollface_non-free.png');">
+
+<body>
 
 </html>
