--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   
+<body bgcolor= "#rrggbb">
+
+<div style= "background-image: url('https://upload.wikimedia.org/wikipedia/en/9/9a/Trollface_non-free.png');"/>
+
    <font size = "5">  Hello Tiny Human World! We're Here To Invade You.</font><br/>
 
 <img src="Images/ufo.png"
@@ -8,8 +12,6 @@ width= "500"
 height= auto
 />
 
-<body bgcolor= "#rrggbb">
-
-<div style= "background-image: url('https://upload.wikimedia.org/wikipedia/en/9/9a/Trollface_non-free.png');">
+</body>
 
 </html>
