--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 <body bgcolor= "#rrggbb">
 
-<div style= "background-image: url('https://upload.wikimedia.org/wikipedia/en/9/9a/Trollface_non-free.png');"/>
+<div style= "background-image: url('https://upload.wikimedia.org/wikipedia/en/9/9a/Trollface_non-free.png');">
 
    <font size = "5">  Hello Tiny Human World! We're Here To Invade You.</font><br/>
 
@@ -11,6 +11,8 @@
 width= "500"
 height= auto
 />
+
+</div>
 
 </body>
 
