--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
   
 <body bgcolor= "#rrggbb">
 
-<div style= "background-image: url('https://upload.wikimedia.org/wikipedia/en/9/9a/Trollface_non-free.png');">
+body, html {
+  height: 100%;
+}
+
+.bg {
+  /* The image used */
+  background-image: url("img_girl.jpg");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
    <font size = "5">  Hello Tiny Human World! We're Here To Invade You.</font><br/>
 
