--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ body, html {
 
 .bg {
   /* The image used */
-  background-image: url("img_girl.jpg");
+  background-image: url("https://upload.wikimedia.org/wikipedia/en/9/9a/Trollface_non-free.png");
 
   /* Full height */
   height: 100%;
