--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   
-<body bgcolor= "#rrggbb">
+
+<style>
 
 body, html {
   height: 100%;
@@ -17,6 +18,10 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+</style>
+
+<body bgcolor= "#rrggbb">
 
    <font size = "5">  Hello Tiny Human World! We're Here To Invade You.</font><br/>
 
