--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ body, html {
   height: 100%;
 }
 
-.bg {
+body {
 
   background-image: url("https://upload.wikimedia.org/wikipedia/en/9/9a/Trollface_non-free.png");
 
