--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ width= "500"
 height= auto
 />
 
-<font size = "5">  LOL, You Just Gotten Trolled</font><br/>
+<font size = "5">  LOL, You Just Got Trolled</font><br/>
 
 </div>
 
