--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ height= auto
 
 <font size = "5">  LOL, Look At Those Zombies!</font><br/>
 
+<p style="color:white">LOL, Look At Those Zombies!</p>
+
 </div>
 
 </body>
