--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@ width= "500"
 height= auto
 />
 
-<font size = "5">  LOL, Look At Those Zombies!</font><br/>
 
-<p style="color:white">LOL, Look At Those Zombies!</p>
+
+<p style="color:white">LOL, Look At Those Zombies!
+font size = "5"</p>
 
 </div>
 
