--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
 
 <body bgcolor= "#rrggbb">
 
-   <font size = "5">  I Like Minecraft.</font><br/>
+   <p style="color:white">I Like Minecraft</p>
 
 <img src="Images/zombiejockey.png"
 width= "500"
@@ -32,8 +32,7 @@ height= auto
 
 
 
-<p style="color:white">LOL, Look At Those Zombies!
-</p><font size = "5">
+<p style="color:white">LOL, Look At Those Zombies!</p>
 
 </div>
 
