--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@ height= auto
 
 
 
-<p <font size="5"> style="color:white">LOL, Look At Those Zombies!</p>
+<p 
+font size="5"
+style="color:white">LOL, Look At Those Zombies!
+</p>
 
 </div>
 
