--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@ height= auto
 
 
 <p 
-<font size="5">
-style="color:white">LOL, Look At Those Zombies!
+<font size="5"
+style="color:white">
+LOL, Look At Those Zombies!
 </p>
 
 </div>
