--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@ height= auto
 
 
 <p 
-<font size="100"
-style="color:white">
-LOL, Look At Those Zombies!
+<font size="100" style="color:white">LOL, Look At Those Zombies!
 </p>
 
 </div>
