--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@ height= auto
 
 
 
-<p 
-<font size="100" style="color:white">
-LOL, Look At Those Zombies!
-</p>
+<p font size="100" style="color:white">LOL, Look At Those Zombies!</p>
 
 </div>
 
