--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ width= "500"
 height= auto
 />
 
-<p <font size="100" style="color:white">LOL, Look At Those Zombies!</p>
+<p style="color:white; font-size:30px">LOL, Look At Those Zombies!</p>
 
 </div>
 
