--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
 
 <body bgcolor= "#rrggbb">
 
-   <p style="color:white">I Like Minecraft</p>
+<p style="color:white; font-size:30px">I Like Minecraft</p>
 
 <img src="Images/zombiejockey.png"
 width= "500"
