--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ height= auto
 
 <p style="color:white; font-size:30px">LOL, Look At Those Zombies!</p>
 
-<p style="color:white; font-size:30px">That Is Minecraft Physics Kids.</p>
+<p style="color:white; font-size:30px">That Is Minecraft Physics Kids, It Really Hurts.</p>
 
 </div>
 
