--- a/index.html
+++ b/index.html
@@ -32,7 +32,19 @@ height= auto
 
 <p style="color:white; font-size:30px">LOL, Look At Those Zombies!</p>
 
+<img src="Images/island.jpeg"
+width= "500"
+height= auto
+/>
+
 <p style="color:white; font-size:30px">That Is Minecraft Physics Kids, It Really Hurts.</p>
+
+<img src="Images/bees.webp"
+width= "500"
+height= auto
+/>
+
+<p style="color:white; font-size:30px">Atleast They Have Cute Animals.</p>
 
 </div>
 
