--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@ height= auto
 	<!-- for styling -->
 	<style>
 		.title{
-		margin-bottom: 100px;
+		margin-bottom: 10px;
 		text-align:center;
 		width: 210px;
-		color:green;
+		color:white;
 		border: solid black 2px;
 		}
 
