--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ height= auto
 			<td><input type="button" value="0" onclick="dis('0')"/> </td>
 			<!-- solve function call function solve to evaluate value -->
 			<td><input type="button" value="=" onclick="solve()"/> </td>
-			<td><input type="button" value="*" onclick="dis('x')"/> </td>
+			<td><input type="button" value="*" onclick="dis('*')"/> </td>
 		</tr>
 	</table>
 
