--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ height= auto
 
 		input[type="button"]
 		{
-		background-color:green;
+		background-color:red;
 		color: black;
 		border: solid black 2px;
 		width:100%
