--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ height= auto
 		input[type="button"]
 		{
 		background-color:red;
-		color: black;
+		color: white;
 		border: solid black 2px;
 		width:100%
 		}
