--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ width= "500"
 height= auto
 />
 
-<p style="color:white; font-size:30px">Atleast They Have Cute Animals.</p>
+<p style="color:white; font-size:30px">Atleast They Have Cute Animals The Size Of Your Head.</p>
 
 </div>
 
