--- a/index.html
+++ b/index.html
@@ -135,4 +135,6 @@ height= auto
 
 </body>
 
+<p style="color:white; font-size:30px">Also, Get Vaccinated And Wear A Mask, It Would Make You A Hero And Save Many Lives.</p>
+
 </html>
