--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ height= auto
 
 <p style="color:white; font-size:30px">Also, Get Vaccinated And Wear A Mask, It Would Make You A Hero And Save Many Lives.</p>
 
-<p style="color:white; font-size:30px">Do It Of The FBI Will Come.</p>
+<p style="color:white; font-size:30px">Do It Or The FBI Will Come.</p>
 
 <img src="Images/fbiopenup.jpg"
 width= "500"
