--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@ body {
 
 <body bgcolor= "#rrggbb">
 
+<p style="color:white; font-size:30px">This Is What I See When I Meet A Dentist.</p>
+
+<img src="Images/dentist.jpg"
+width= "500"
+height= auto
+/>
+
 <p style="color:white; font-size:30px">I Like Minecraft</p>
 
 <img src="Images/zombiejockey.png"
@@ -97,7 +104,7 @@ height= auto
 	</style>
 </head>
 <!-- create table -->
-	<div class = title > Calculator</div>
+	<div class = title >Free Calculator</div>
 	<table border="1">
 		<tr>
 			<td colspan="3"><input type="text" id="result"/></td>
