--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
 
 <body bgcolor= "#rrggbb">
 
-<p style="color:white; font-size:30px">This Is What I See When I Meet A Dentist.              Dentist POV</p>
+<p style="color:white; font-size:30px">This Is What I See When I Meet A Dentist.              Dentist POV.</p>
 
 <img src="Images/dentist.jpg"
 width= "500"
