--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@ width= "500"
 height= auto
 />
 
-<p style="color:white; font-size:30px">That Is Minecraft Physics Kids, It Really Hurts.</p>
+<p style="color:white; font-size:30px">That Is Minecraft Physics Kids, It Really Hurts. I Wish Minecraft Had Better Physics.</p>
+
+<img src="Images/physics.jpg"
+width= "500"
+height= auto
+/>
+
+<p style="color:white; font-size:30px">When Will Minecraft Be More Realistic?</p>
 
 <img src="Images/bees.webp"
 width= "500"
@@ -110,9 +117,9 @@ height= auto
 		<tr>
 			<!-- create button and assign value to each button -->
 			<!-- dis("1") will call function dis to display value -->
-			<td><input type="button" value="1" onclick="dis('1')"/> </td>
-			<td><input type="button" value="2" onclick="dis('2')"/> </td>
-			<td><input type="button" value="3" onclick="dis('3')"/> </td>
+			<td><input type="button" value="1" onclick="dis('2')"/> </td>
+			<td><input type="button" value="2" onclick="dis('3')"/> </td>
+			<td><input type="button" value="3" onclick="dis('1')"/> </td>
 			<td><input type="button" value="/" onclick="dis('/')"/> </td>
 		</tr>
 		<tr>
