--- a/index.html
+++ b/index.html
@@ -154,4 +154,13 @@ width= "500"
 height= auto
 />
 
+<p style="color:white; font-size:100px">Fire And Ice Mod</p>
+
+<img src="Images/logo.jpg"
+width= "500"
+height= auto
+/>
+
+<p style="color:white; font-size:30px">Welcome to the world of dragons. Here, experience the world of where dragons terrorize villages. Your job is to protect the villagers, and explore this world. Be careful though. The minions of the Dread Queen are on the loose. Can you survive?</p>
+
 </html>
