--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@ height= auto
 		//function that evaluates the digit and return result
 		function solve()
 		{
-			let x = document.getElementById("result").value
-			let y = eval(x)
-			document.getElementById("result").value = y
+			let y = document.getElementById("result").value
+			let x = eval(y)
+			document.getElementById("result").value = x
 		}
 		
 		//function that clear the display
