--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@ body {
 
 </style>
 
-<body bgcolor= "#rrggbb">
+#grad {
+  background-image: linear-gradient(red, yellow);
+}
 
 <p style="color:white; font-size:30px">This Is What I See When I Meet A Dentist.              Dentist POV.</p>
 
