--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
 <style>
 
-#grab {
+  height: 100%;
+  background-color: red; /* For browsers that do not support gradients */
   background-image: linear-gradient(red, yellow);
-}
 
 </style>
 
