--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 
 <style>
 
-  height: 100%;
-  background-color: red; /* For browsers that do not support gradients */
-  background-image: linear-gradient(red, yellow);
+<div id="grad1"></div>
 
 </style>
 
