--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 #grad1 {
   height: 100%^;
-  background-color: red; /* For browsers that do not support gradients */
+  background-color: red;
   background-image: linear-gradient(red, yellow);
 }
 <div id="grad1"></div>
