--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 
 #grad1 {
-  height: 100%^;
+  height: 100%;
   background-color: red;
   background-image: linear-gradient(red, yellow);
 }
