--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 </body>
 
-<p style="color:white; font-size:100px">Fire And Ice Mod</p>
+<p style="color:black; font-size:100px">Fire And Ice Mod</p>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -120,6 +120,6 @@ width= "500"
 height= auto
 />
 
-<p style="color:white; font-size:30px">Welcome to the world of dragons. Here, experience the world of where dragons terrorize villages. Your job is to protect the villagers, and explore this world. Be careful though. The minions of the Dread Queen are on the loose. Can you survive?</p>
+<p style="color:black; font-size:30px">Welcome to the world of dragons. Here, experience the world of where dragons terrorize villages. Your job is to protect the villagers, and explore this world. Be careful though. The minions of the Dread Queen are on the loose. Can you survive?</p>
 </div>
 </html>
