--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
 
 <style>
 
-#grad1 {
-  height: 200px;
-  background-color: red;
-  background-image: linear-gradient(red, yellow);
+div {
+    background: linear-gradient(to bottom, #cc0000 0%, #ffcc00 100%);
 }
-
 
 		.title{
 		margin-bottom: 10px;
