--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+
+div {
+    height: 400px;
+    background: linear-gradient(to bottom, #ff0000 0%, #ffcc00 100%)
+}
+
 </style>
 </head>
 <body>
@@ -109,10 +115,6 @@ img {
 width= "500"
 height= auto
 />
-
-div {
-    background: linear-gradient(to bottom, #cc0000 0%, #ffcc00 100%);
-}
 
 <p style="color:black; font-size:30px">Welcome to the world of dragons. Here, experience the world of where dragons terrorize villages. Your job is to protect the villagers, and explore this world. Can you survive?</p>
 
