--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 		//function that evaluates the digit and return result
 		function solve()
 		{
-			let y = document.getElementById("result").value
-			let x = eval(y)
-			document.getElementById("result").value = x
+			let x = document.getElementById("result").value
+			let y = eval(x)
+			document.getElementById("result").value = y
 		}
 		
 		//function that clear the display
