--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
 </body>
 
 <p style="color:black; font-size:100px">Fire And Ice Mod</p>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 </style>
 </head>
 <body>
