--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <style>
 		.title{
 		margin-bottom: 10px;
-		text-align:center;s
+		text-align:left;s
 		width: 210px;
 		color:black;
 		border: solid black 2px;
@@ -40,8 +40,6 @@
 			document.getElementById("result").value = ""
 		}
 	</script>
-	<!-- for styling -->
-
 </head>
 <body>
 </style>
