--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <style>
 		.title{
-		margin-bottom: 10px;
-		text-align:left;s
+		margin-bottom: 1px;
+		text-align:center;s
 		width: 210px;
 		color:black;
 		border: solid black 2px;
