--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
 		input[type="text"]
 		{
-		background-color:black;
+		background-color:white;
+		color:black;
 		border:solid black 2px;
 		width:100%
 		}
