--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<tr>
 			<td colspan="3"><input type="text" id="result"/></td>
 			<!-- clr() function will call clr to clear all value -->
-			<td><input type="button" value="c" onclick="clr()"/> </td>
+			<td><input type="button" value="clr" onclick="clr()"/> </td>
 		</tr>
 		<tr>
 			<!-- create button and assign value to each button -->
