--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 		input[type="button"]
 		{
-		background-color:green;
+		background-color:white;
 		color:black;
 		border:solid black 2px;
 		width:100%
@@ -43,7 +43,7 @@
 
 		input[type="text"]
 		{
-		background-color:green;
+		background-color:white;
 		color:black;
 		border:solid black 2px;
 		width:100%
