--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	<div class = title >Free Calculator</div>
 	<table border="1">
 		<tr>
-			<td><colspan="3" input type="text" id="result"/></td>
+			<td> colspan="3" input type="text" id="result" </td>
 			<!-- clr() function will call clr to clear all value -->
 			<td><input type="button" value="c" onclick="clr()"/> </td>
 		</tr>
