--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <style>
+<html>
 <head>
 	<script>
 		//function that display value
@@ -29,33 +30,32 @@
 		margin-bottom: 10px;
 		text-align:center;
 		width: 210px;
-		color:black;
-		border:solid black 2px;
+		color:green;
+		border: solid black 2px;
 		}
 
 		input[type="button"]
 		{
-		background-color:white;
-		color:black;
-		border:solid black 2px;
+		background-color:green;
+		color: black;
+		border: solid black 2px;
 		width:100%
 		}
 
 		input[type="text"]
 		{
 		background-color:white;
-		color:black;
-		border:solid black 2px;
+		border: solid black 2px;
 		width:100%
 		}
 	</style>
 </head>
 <!-- create table -->
 <body>
-	<div class = title >Free Calculator</div>
+	<div class = title >GeeksforGeeks Calculator</div>
 	<table border="1">
 		<tr>
-			<td> colspan="3" input type="text" id="result" </td>
+			<td colspan="3"><input type="text" id="result"/></td>
 			<!-- clr() function will call clr to clear all value -->
 			<td><input type="button" value="c" onclick="clr()"/> </td>
 		</tr>
@@ -77,9 +77,10 @@
 			<td><input type="button" value="7" onclick="dis('7')"/> </td>
 			<td><input type="button" value="8" onclick="dis('8')"/> </td>
 			<td><input type="button" value="9" onclick="dis('9')"/> </td>
-			<td><input type="button" value="." onclick="dis('.')"/> </td>
+			<td><input type="button" value="+" onclick="dis('+')"/> </td>
 		</tr>
 		<tr>
+			<td><input type="button" value="." onclick="dis('.')"/> </td>
 			<td><input type="button" value="0" onclick="dis('0')"/> </td>
 			<!-- solve function call function solve to evaluate value -->
 			<td><input type="button" value="=" onclick="solve()"/> </td>
@@ -88,6 +89,7 @@
 	</table>
 </body>
 </html>
+
 
 <p style="color:black; font-size:100px">Fire And Ice Mod</p>
 
