--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 		margin-bottom: 10px;
 		text-align:center;
 		width: 210px;
-		color:green;
+		color:black;
 		border: solid black 2px;
 		}
 
 		input[type="button"]
 		{
-		background-color:green;
+		background-color:white;
 		color: black;
 		border: solid black 2px;
 		width:100%
