--- a/index.html
+++ b/index.html
@@ -113,5 +113,19 @@ height= auto
 
 <p style="color:black; font-size:30px">Welcome to the world of dragons. Here, experience the world of where dragons terrorize villages. Your job is to protect the villagers, and explore this world. Can you survive?</p>
 
+<p style="color:black; font-size:70px">Types Of Dragons</p>
+
+<p style="color:black; font-size:50px">Fire Dragons</p>
+
+<p style="color:black; font-size:30px">These dragons are the most common. They can be found in any warm biome, for example, a desert. They are aggressive, and have 5 stages. The breath fire that will either char, or burn the stuff around it. They will guard hoards of gold to the death.</p>
+
+<p style="color:black; font-size:50px">Ice Dragons</p>
+
+<p style="color:black; font-size:30px">These beasts are native to the cold regions, like tundras. When they breath, they can freeze water, and leave a trail of ice spikes. They protect silver from any greedy adventurer.</p>
+
+<p style="color:black; font-size:50px">Lightning Dragon.</p>
+
+<p style="color:black; font-size:30px">These dragons are found in jungles. They are nocturnal, so you don't have to worry about them in thhe day. Unlike the other dragons, this breaths lightning, and its effects aren't permanent. They protect hoards of copper. This dragon is also stronger than the rest of the dragons when at the same age.</p>
+
 </div>
 </html>
