--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
 </body>
 </html>
 
+<table style="background-color:#33475b">
+
 <p style="color:black; font-size:100px">Fire And Ice Mod</p>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
