--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </body>
 </html>
 
-<body bgcolor="red">
+<body text="#ffffff" link="#ff0000" vlink="#ff0000" alink="#ff0000">
 
 <p style="color:black; font-size:100px">Fire And Ice Mod</p>
 
