--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <style>
 <html>
 
-body{
-background-color: #DBF9FC;
-}
+<table style="background-color:#33475b"</table>
 
 <p style="color:black; font-size:100px">Fire And Ice Mod</p>
 
