--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <style>
 <html>
 
-<table style="background-color:#33475b"</table>
 
 <p style="color:black; font-size:100px">Fire And Ice Mod</p>
 
@@ -18,6 +17,8 @@ img {
 </style>
 </head>
 <body>
+
+background-color: #DBF9FC;
 
 <img src="Images/logo.jpg"
 width= "500"
