--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <style>
-<html>
 
+body {
+background-color: #DBF9FC;
+}
 
 <p style="color:black; font-size:100px">Fire And Ice Mod</p>
 
@@ -17,8 +19,6 @@ img {
 </style>
 </head>
 <body>
-
-background-color: #DBF9FC;
 
 <img src="Images/logo.jpg"
 width= "500"
