--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <style>
 
-body {
-background-color: #DBF9FC;
+#grad {
+  background-image: linear-gradient(red, yellow);
 }
 
 <p style="color:black; font-size:100px">Fire And Ice Mod</p>
