--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<style>
+<body>
 <p style="color:black; font-size:100px">Welcome to the Hub.</p>
 <p style="color:black; font-size:60px">This is where the main pages of some topics are linked to.</p>
 <p style="color:black; font-size:60px">Have fun.</p>
-</div>
+</body>
 </html>
