--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 <p style="color:black; font-size:100px">Welcome to the Hub.</p>
 <p style="color:black; font-size:60px">This is where the main pages of some topics are linked to.</p>
 <p style="color:black; font-size:60px">Have fun.</p>
+<a href="easternwinter.github.io/Ice_and_Fire.html/" style="color:blue; font-size:30px">Here is the link for an Ice and Fire Wiki</a>
+<a href="easternwinter.github.io/Lord_of_Rings_Kingdoms.hmtl/" style="color:blue; font-size:30px">Here is the link for Kingdoms of Lord of The Rings</a>
 </body>
 </html>
