--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <p style="color:black; font-size:100px">Welcome to the Hub.</p>
 <p style="color:black; font-size:50px">This is where the main pages of some topics are linked to.</p>
-<a href="easternwinter.github.io/Ice_and_Fire.html" style="color:blue; font-size:50px">Here is the link for an Ice and Fire Wiki</a>
-<a href="easternwinter.github.io/Lord_of_Rings_Kingdoms.hmtl" style="color:blue; font-size:50px">Here is the link for Kingdoms of Lord of The Rings</a>
+<a href="https://easternwinter.github.io/Ice_and_Fire.html" style="color:blue; font-size:50px">Here is the link for an Ice and Fire Wiki</a>
+<a href="https://easternwinter.github.io/Lord_of_Rings_Kingdoms.hmtl" style="color:blue; font-size:50px">Here is the link for Kingdoms of Lord of The Rings</a>
 </body>
 </html>
