--- a/Lord_of_Rings_Kingdoms.html
+++ b/Lord_of_Rings_Kingdoms.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body background="Ring_of_power.png">
-<p style="color:black; font-size:30px">Kingdoms of Middle-Earth</p>
+<p style="color:black; font-size:100px">Nations of Middle-Earth</p>
+<p style="color:black; font-size:50px">Nations of Elves</p>
+<p style="color:black; font-size:30px">Dorwinion</p>
+<br><p style="color:black; font-size:30px">Lindon</p>
+<br><p style="color:black; font-size:30px">Lothlórien</p>
+<br><p style="color:black; font-size:30px">Rivendell</p>
+<br><p style="color:black; font-size:30px">Woodland Realm</p>
 </body>
 </html>
