--- a/Lord_of_Rings_Kingdoms.html
+++ b/Lord_of_Rings_Kingdoms.html
@@ -4,9 +4,29 @@
 <p style="color:black; font-size:100px">Nations of Middle-Earth</p>
 <p style="color:black; font-size:50px">Nations of Elves</p>
 <p style="color:black; font-size:30px">Dorwinion</p>
+<img src="Images/dorwinionflag.jpg"
+width= "500"
+height= auto
+/>
 <br><p style="color:black; font-size:30px">Lindon</p>
+<img src="Images/gilgalad.jpg"
+width= "500"
+height= auto
+/>
 <br><p style="color:black; font-size:30px">Lothlórien</p>
+<img src="Images/carasgaladhon.jpg"
+width= "500"
+height= auto
+/>
 <br><p style="color:black; font-size:30px">Rivendell</p>
+<img src="Images/lasthomelyhouse.jpg"
+width= "500"
+height= auto
+/>
 <br><p style="color:black; font-size:30px">Woodland Realm</p>
+<img src="Images/woodlandrealmpalace.jpg"
+width= "500"
+height= auto
+/>
 </body>
 </html>
