--- a/Lord_of_Rings_Kingdoms.html
+++ b/Lord_of_Rings_Kingdoms.html
@@ -4,7 +4,7 @@
 <p style="color:black; font-size:100px">Nations of Middle-Earth</p>
 <p style="color:black; font-size:50px">Nations of Elves</p>
 <p style="color:black; font-size:30px">Dorwinion</p>
-<marquee behavior="scroll" direction="left">
+<marquee behavior="still" direction="right">
 <img src="Images/dorwinionflag.jpg"
 width= "500"
 height= auto
