Added mad to lotr page
Map of middle-earth added

--- a/Lord_of_Rings_Kingdoms.html
+++ b/Lord_of_Rings_Kingdoms.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body background="Ring_of_power.png">
-<p style="color:black; font-size:100px">Nations of Middle-Earth</p>
+<p style="color:gold; font-size:100px">Nations of Middle-Earth</p>
+<img src="Images/map.jpg"
+width= auto
+height= "500"
+/>
 <p style="color:black; font-size:50px">Nations of Elves</p>
 <p style="color:black; font-size:40px">Dorwinion</p>
 <img src="Images/dorwinionflag.jpg"
