--- a/Lord_of_Rings_Kingdoms.html
+++ b/Lord_of_Rings_Kingdoms.html
@@ -12,6 +12,10 @@ height= "500"
 width= "500"
 height= auto
 />
+<img src="Images/one_ring.webp"
+width= auto
+height= "500"
+/>
 <br><p style="color:black; font-size:40px">Lindon</p>
 <img src="Images/gilgalad.jpg"
 width= "500"
