--- a/Lord_of_Rings_Kingdoms.html
+++ b/Lord_of_Rings_Kingdoms.html
@@ -9,7 +9,7 @@ height= "500"
 
 <img src="Images/one_ring.webp"
 width= auto
-height= "auto"
+height= "500"
 />
 
 <p style="color:black; font-size:50px">Nations of Elves</p>
