--- a/Lord_of_Rings_Kingdoms.html
+++ b/Lord_of_Rings_Kingdoms.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body background="Ring_of_power.png">
+<body>
 <p style="color:gold; font-size:100px">Nations of Middle-Earth</p>
 <img src="Images/map.jpg"
 width= auto
@@ -12,42 +12,7 @@ width= auto
 height= "500"
 />
 
-<p style="color:black; font-size:50px">Nations of Elves</p>
-
-<p style="color:black; font-size:40px">Dorwinion</p>
-
-<img src="Images/dorwinionflag.jpg"
-width= 500
-height= auto
-/>
-
-<br><p style="color:black; font-size:40px">Lindon</p>
-
-<img src="Images/gilgalad.jpg"
-width= "500"
-height= auto
-/>
-
-<br><p style="color:black; font-size:40px">Lothlórien</p>
-
-<img src="Images/carasgaladhon.jpg"
-width= "500"
-height= auto
-/>
-
-<br><p style="color:black; font-size:40px">Rivendell</p>
-
-<img src="Images/lasthomelyhouse.jpg"
-width= "500"
-height= auto
-/>
-
-<br><p style="color:black; font-size:40px">Woodland Realm</p>
-
-<img src="Images/woodlandrealmpalace.jpg"
-width= "500"
-height= auto
-/>
+<br><a href="https://easternwinter.github.io/Nations_of_Elves.html" style="color:blue; font-size:50px">Here is the link for Kingdoms of Lord of The Rings</a>
 
 </body>
 </html>
