--- a/Nation_of_Elves.html
+++ b/Nation_of_Elves.html
@@ -1,1 +1,38 @@
 <html>
+<p style="color:black; font-size:50px">Nations of Elves</p>
+
+<p style="color:black; font-size:40px">Dorwinion</p>
+
+<img src="Images/dorwinionflag.jpg"
+width= 500
+height= auto
+/>
+
+<br><p style="color:black; font-size:40px">Lindon</p>
+
+<img src="Images/gilgalad.jpg"
+width= "500"
+height= auto
+/>
+
+<br><p style="color:black; font-size:40px">Lothlórien</p>
+
+<img src="Images/carasgaladhon.jpg"
+width= "500"
+height= auto
+/>
+
+<br><p style="color:black; font-size:40px">Rivendell</p>
+
+<img src="Images/lasthomelyhouse.jpg"
+width= "500"
+height= auto
+/>
+
+<br><p style="color:black; font-size:40px">Woodland Realm</p>
+
+<img src="Images/woodlandrealmpalace.jpg"
+width= "500"
+height= auto
+/>
+</html>
