--- a/Lord_of_Rings_Kingdoms.html
+++ b/Lord_of_Rings_Kingdoms.html
@@ -12,7 +12,7 @@ width= auto
 height= "500"
 />
 
-<br><a href="https://easternwinter.github.io/Nations_of_Elves.html" style="color:blue; font-size:50px">Here is the link for Kingdoms of Lord of The Rings</a>
+<br><a href="https://easternwinter.github.io/Nation_of_Elves.html" style="color:blue; font-size:50px">Here is the link for Kingdoms of Lord of The Rings</a>
 
 </body>
 </html>
